Resolve some additional weather logic in WorldGuard Folia and match additional entity removal concurrency issues